feat: add github url & keyword

--- a/package.json
+++ b/package.json
@@ -50,5 +50,16 @@
       "@types/react": "npm:types-react@19.0.0-rc.1",
       "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
     }
-  }
+  },
+  "keywords": [
+    "Nextjs 15",
+    "tailwindcss",
+    "typescript",
+    "React 19",
+    "shadcn",
+    "boilerplate",
+    "template",
+    "starter",
+    "geist"
+  ]
 }
